--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-responsive": "^8.1.0",
+    "react-spring": "^8.0.27",
+    "react-use-gesture": "^7.0.16",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
