--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "gatsby-starter-hello-world",
-  "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
-  "version": "0.1.0",
+  "name": "vlw.github.io",
+  "private": false,
+  "description": "",
+  "version": "0.0.0",
+  "main": "index.html",
+  "repository": "https://github.com/vickilouiseward/vlw.github.io",
   "license": "0BSD",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
+    "deploy": "npm run build && gh-pages -d public -b master",
     "format": "standard",
     "start": "npm run develop",
     "serve": "gatsby serve",
@@ -28,14 +31,8 @@
     "react-use-gesture": "^7.0.16",
     "styled-components": "^5.2.0"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
-  },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "standard": "^14.3.4"
   }
 }
