--- a/package.json
+++ b/package.json
@@ -16,7 +16,14 @@
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
+  "browser": {
+    "child_process": false,
+    "fs": false,
+    "net": false,
+    "tls": false
+  },
   "dependencies": {
+    "axios": "^0.21.0",
     "babel-plugin-styled-components": "^1.11.1",
     "gatsby": "^2.24.66",
     "gatsby-image": "^2.4.21",
@@ -26,6 +33,7 @@
     "gatsby-transformer-sharp": "^2.5.17",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-hook-form": "^6.9.5",
     "react-responsive": "^8.1.0",
     "react-spring": "^8.0.27",
     "react-use-gesture": "^7.0.16",
