--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "babel-plugin-styled-components": "^1.11.1",
     "gatsby": "^2.24.66",
     "gatsby-image": "^2.4.21",
+    "gatsby-plugin-react-helmet": "^3.3.14",
     "gatsby-plugin-sharp": "^2.6.39",
     "gatsby-plugin-styled-components": "^3.3.12",
     "gatsby-source-filesystem": "^2.3.33",
     "gatsby-transformer-sharp": "^2.5.17",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^6.9.5",
     "react-responsive": "^8.1.0",
     "react-spring": "^8.0.27",
