--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^6.9.5",
+    "react-lazyload": "^3.1.0",
     "react-responsive": "^8.1.0",
     "react-spring": "^8.0.27",
     "react-use-gesture": "^7.0.16",
