--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@formium/client": "^0.1.2",
     "@formium/react": "^0.1.1",
+    "aos": "^2.3.4",
     "axios": "^0.21.0",
     "babel-plugin-styled-components": "^1.11.1",
     "gatsby": "^2.24.66",
@@ -39,7 +40,6 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^6.9.5",
-    "react-lazyload": "^3.1.0",
     "react-responsive": "^8.1.0",
     "react-spring": "^8.0.27",
     "react-use-gesture": "^7.0.16",
